<resources>
    <string name="app_name">mobile-computing-project-rroman08</string>
    <string name="app_title">Sous Chef Droid</string>
    <string name="create_new_recipe">Create New Recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="category">Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_ingredients">+ add ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="add_instructions">+ add instructions</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="current_recipe_title">CURRENT RECIPE TITLE</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard_changes">Discard Changes</string>
    <string name="see_recipe">See Recipe</string>
</resources>