<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_pink">

        <!-- Scrollable content above the buttons -->
        <ScrollView
            android:id="@+id/main_scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/button_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linear_layout_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Sous Chef Droid header -->
                <TextView
                    android:id="@+id/text_view_app_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="28dp"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/app_title"
                    android:textSize="32sp" />

                <!-- Activity description -->
                <TextView
                    android:id="@+id/text_view_edit_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/edit_recipe"
                    android:textColor="@color/burgundy"
                    android:textSize="24sp" />

                <!-- Recipe name input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="28dp"
                    android:hint="@string/recipe_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_recipe_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Category selection spinner -->
                <TextView
                    android:id="@+id/text_view_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/category"
                    android:textColor="@color/dark_grey"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <Spinner
                    android:id="@+id/spinner_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="28dp" />

                <!-- Cooking ingredients section -->
                <TextView
                    android:id="@+id/text_view_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/ingredients"
                    android:textColor="@color/dark_grey"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/linear_layout_ingredients_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <Button
                    android:id="@+id/button_add_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/add_ingredients"
                    android:textColor="@color/burgundy"
                    app:backgroundTint="@color/pink" />

                <!-- Cooking instructions section -->
                <TextView
                    android:id="@+id/text_view_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/instructions"
                    android:textColor="@color/dark_grey"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/linear_layout_instructions_data_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <Button
                    android:id="@+id/button_add_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/add_instructions"
                    android:textColor="@color/burgundy"
                    app:backgroundTint="@color/pink" />

            </LinearLayout>

        </ScrollView>

        <!-- Container to hold save button and discard button dynamically -->
        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/save_changes" />

            <Button
                android:id="@+id/button_discard_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/pink"
                android:text="@string/discard_changes"
                android:textColor="@color/burgundy"
                android:visibility="gone"
                app:backgroundTint="@color/pink" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
