<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Recipe class for data binding -->
        <variable
            name="recipe"
            type="uk.ac.bbk.dcs.mobile_computing_project_rroman08.data.local.Recipe" />
    </data>

    <!-- Inside a scrollview for user to scroll down to see all content on screen -->
    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_pink"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/linear_layout_scrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Sous Chef Droid header -->
            <TextView
                android:id="@+id/text_view_app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="28dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="@string/app_title"
                android:textSize="32sp" />

            <!-- Recipe title display -->
            <TextView
                android:id="@+id/text_view_recipe_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@{recipe.title}"
                android:textColor="@color/burgundy"
                android:textSize="24sp"
                tools:text="Mountain Goat Curry" />

            <!-- Recipe category display -->
            <TextView
                android:id="@+id/text_view_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:fontFamily="sans-serif-light"
                android:text="@{recipe.category}"
                android:textColor="@color/dark_grey"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:text="Lunch" />

            <!-- List of ingredients section title -->
            <TextView
                android:id="@+id/text_view_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/ingredients"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <!-- Layout that contains lists of ingredients -->
            <LinearLayout
                android:id="@+id/linear_layout_ingredients_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <!-- List of instructions section title -->
            <TextView
                android:id="@+id/text_view_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/instructions"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <!-- Layout that contains lists of instructions -->
            <LinearLayout
                android:id="@+id/linear_layout_instructions_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <!-- Edit recipe button: navigates to edit activity -->
            <Button
                android:id="@+id/button_edit_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/edit_recipe"
                android:textColor="@color/burgundy"
                app:backgroundTint="@color/pink" />

            <!-- Delete recipe button: deletes recipe from db -->
            <Button
                android:id="@+id/button_delete_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/delete_recipe" />

        </LinearLayout>

    </ScrollView>

</layout>